Fix headings and spacing

--- a/assets/theme-css/styles.css
+++ b/assets/theme-css/styles.css
@@ -343,13 +343,24 @@ svg.icon {
 
 pre {
     padding: 10px;
-    border: 1px solid #e5e5e5;
+/*    border: 5px solid; #e5e5e5; */
     border-radius: 3px;
-    background: #fff;
+    background: var(--colorPrimaryDark);
+    color: #f8f8f2;
+/*    background-color: var(--colorPrimaryDark); */
+    margin-top: 0.25rem;
 }
 
 code {
     color: #f0506e;
     padding: 2px 6px;
     background: #f8f8f8;
+}
+
+.uk-h1, .uk-h2, .uk-h3, .uk-h4, .uk-h5, .uk-h6, .uk-heading-2xlarge, .uk-heading-large, .uk-heading-medium, .uk-heading-small, .uk-heading-xlarge, h1, h2, h3, h4, h5, h6 {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+}
+
+.uk-h2, h2 {
+    line-height: 1.3;
 }
